checker/tests/parsing/errors/fn_wrong_order.mft
fn f {
  returns Y;
  operand X;
}
=== error ===
Unrecognized token `returns` found at 9:16
Expected one of "operand"